force-app/main/default/objects/Product2/fields/AgenteFinanceiro__c.field-meta.xml
<CustomField>
    <fullName>AgenteFinanceiro__c</fullName>
    <description>Indica o tipo de agente financeiro responsável pela unidade.</description>
    <inlineHelpText>Indica o tipo de agente financeiro responsável pela unidade.</inlineHelpText>
    <label>Agente financeiro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AgenteFinanceiro</valueSetName>
    </valueSet>
</CustomField>