force-app/main/default/objects/Product2/fields/Andar__c.field-meta.xml
<CustomField>
    <fullName>Andar__c</fullName>
    <label>Andar</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>