force-app/main/default/objects/Product2/fields/AreaComum__c.field-meta.xml
<CustomField>
    <fullName>AreaComum__c</fullName>
    <label>Área Comum</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>