force-app/main/default/objects/Product2/fields/AreaRural__c.field-meta.xml
<CustomField>
    <fullName>AreaRural__c</fullName>
    <label>Área Rural</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>