force-app/main/default/objects/Product2/fields/Bloco__c.field-meta.xml
<CustomField>
    <fullName>Bloco__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Bloco</label>
    <referenceTo>Bloco__c</referenceTo>
    <relationshipLabel>Unidades</relationshipLabel>
    <relationshipName>Unidades</relationshipName>
    <type>Lookup</type>
</CustomField>