force-app/main/default/objects/Product2/fields/CentroCustoEngenharia__c.field-meta.xml
<CustomField>
    <fullName>CentroCustoEngenharia__c</fullName>
    <label>Centro de Custo Engenharia</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>