force-app/main/default/objects/Product2/fields/CodigoMatricula__c.field-meta.xml
<CustomField>
    <fullName>CodigoMatricula__c</fullName>
    <label>Código da Matrícula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>