force-app/main/default/objects/Product2/fields/CodigoStatusIntegracao__c.field-meta.xml
<CustomField>
    <fullName>CodigoStatusIntegracao__c</fullName>
    <description>Indica o código do status retornado pela integração com ERP.</description>
    <inlineHelpText>Indica o código do status retornado pela integração com ERP.</inlineHelpText>
    <label>Código do status da integração</label>
    <length>255</length>
    <type>Text</type>
</CustomField>