force-app/main/default/objects/Product2/fields/Coeficiente__c.field-meta.xml
<CustomField>
    <fullName>Coeficiente__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Coeficiente a ser aplicado nesta unidade para geração do valor comercial.</description>
    <inlineHelpText>Coeficiente a ser aplicado nesta unidade para geração do valor comercial.</inlineHelpText>
    <label>Coeficiente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>