force-app/main/default/objects/Product2/fields/CorDisponivel__c.field-meta.xml
<CustomField>
    <fullName>CorDisponivel__c</fullName>
    <formula>IF(ISPICKVAL(Status__c, &apos;Livre&apos;), &apos;#3CB371&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CorDisponivel</label>
    <type>Text</type>
</CustomField>