force-app/main/default/objects/Product2/fields/CorVendida__c.field-meta.xml
<CustomField>
    <fullName>CorVendida__c</fullName>
    <formula>IF(ISPICKVAL(Status__c, &apos;Vendida&apos;), &apos;#DC143C&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CorVendida</label>
    <type>Text</type>
</CustomField>