force-app/main/default/objects/Product2/fields/DataExpedicaoAlvara__c.field-meta.xml
<CustomField>
    <fullName>DataExpedicaoAlvara__c</fullName>
    <label>Data de Expedição do Alvará</label>
    <type>Date</type>
</CustomField>