force-app/main/default/objects/Product2/fields/DataMatricula__c.field-meta.xml
<CustomField>
    <fullName>DataMatricula__c</fullName>
    <label>Data da Matrícula</label>
    <type>Date</type>
</CustomField>