force-app/main/default/objects/Product2/fields/Dependencias__c.field-meta.xml
<CustomField>
    <fullName>Dependencias__c</fullName>
    <label>Dependências</label>
    <length>200</length>
    <type>Text</type>
</CustomField>