force-app/main/default/objects/Product2/fields/Empreendimento__c.field-meta.xml
<CustomField>
    <fullName>Empreendimento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Indique o empreendimento em que se encontra esta unidade.</inlineHelpText>
    <label>Empreendimento</label>
    <referenceTo>Empreendimento__c</referenceTo>
    <relationshipLabel>Unidades</relationshipLabel>
    <relationshipName>Unidades</relationshipName>
    <type>Lookup</type>
</CustomField>