force-app/main/default/objects/Product2/fields/Enquadramento__c.field-meta.xml
<CustomField>
    <fullName>Enquadramento__c</fullName>
    <label>Enquadramento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Enquadramento</valueSetName>
    </valueSet>
</CustomField>