force-app/main/default/objects/Product2/fields/FracaoFiscal__c.field-meta.xml
<CustomField>
    <fullName>FracaoFiscal__c</fullName>
    <label>Fração Fiscal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>