force-app/main/default/objects/Product2/fields/FracaoFiscalTerreno__c.field-meta.xml
<CustomField>
    <fullName>FracaoFiscalTerreno__c</fullName>
    <label>Fração Fiscal do Terreno</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>