force-app/main/default/objects/Product2/fields/FracaoSocietaria__c.field-meta.xml
<CustomField>
    <fullName>FracaoSocietaria__c</fullName>
    <label>Fração Societária</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>