force-app/main/default/objects/Product2/fields/FracaoSocietariaTerreno__c.field-meta.xml
<CustomField>
    <fullName>FracaoSocietariaTerreno__c</fullName>
    <label>Fração Societária do Terreno</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>