force-app/main/default/objects/Product2/fields/Garagem__c.field-meta.xml
<CustomField>
    <fullName>Garagem__c</fullName>
    <description>Garagem</description>
    <label>Garagem</label>
    <length>60</length>
    <type>Text</type>
</CustomField>