force-app/main/default/objects/Product2/fields/Inscri_o__c.field-meta.xml
<CustomField>
    <fullName>Inscri_o__c</fullName>
    <label>Inscrição Municipal</label>
    <length>200</length>
    <type>Text</type>
</CustomField>