force-app/main/default/objects/Product2/fields/LocalMatricula__c.field-meta.xml
<CustomField>
    <fullName>LocalMatricula__c</fullName>
    <label>Local da Matrícula</label>
    <length>200</length>
    <type>Text</type>
</CustomField>