force-app/main/default/objects/Product2/fields/MensagemIntegracao__c.field-meta.xml
<CustomField>
    <fullName>MensagemIntegracao__c</fullName>
    <description>Indica mensagem retornada pela integração com ERP.</description>
    <inlineHelpText>Indica mensagem retornada pela integração com ERP.</inlineHelpText>
    <label>Mensagem da integração</label>
    <length>255</length>
    <type>Text</type>
</CustomField>