force-app/main/default/objects/Product2/fields/MetragemPrivativaCoberta__c.field-meta.xml
<CustomField>
    <fullName>MetragemPrivativaCoberta__c</fullName>
    <label>Metragem privativa coberta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>