force-app/main/default/objects/Product2/fields/MetragemPrivativaDescoberta__c.field-meta.xml
<CustomField>
    <fullName>MetragemPrivativaDescoberta__c</fullName>
    <label>Metragem privativa descoberta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>