force-app/main/default/objects/Product2/fields/MetragemTotal__c.field-meta.xml
<CustomField>
    <fullName>MetragemTotal__c</fullName>
    <description>Indica a metragem total da unidade, consistindo no somatório das áreas privativas coberta e descoberta.</description>
    <formula>MetragemPrivativaCoberta__c + MetragemPrivativaDescoberta__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indica a metragem total da unidade, consistindo no somatório das áreas privativas coberta e descoberta.</inlineHelpText>
    <label>Metragem total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>