force-app/main/default/objects/Product2/fields/NomePrefeituraExpedidoraAlvara__c.field-meta.xml
<CustomField>
    <fullName>NomePrefeituraExpedidoraAlvara__c</fullName>
    <label>Nome da Prefeitura Expedidora do Alvará</label>
    <length>200</length>
    <type>Text</type>
</CustomField>