force-app/main/default/objects/Product2/fields/NumeroAlvaraAprovacaoObra__c.field-meta.xml
<CustomField>
    <fullName>NumeroAlvaraAprovacaoObra__c</fullName>
    <inlineHelpText>Número do alvará da aprovação da obra</inlineHelpText>
    <label>Número do Alvará de Aprovação da Obra</label>
    <length>200</length>
    <type>Text</type>
</CustomField>