force-app/main/default/objects/Product2/fields/NumeroDaUnidade__c.field-meta.xml
<CustomField>
    <fullName>NumeroDaUnidade__c</fullName>
    <label>Número da Unidade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>