force-app/main/default/objects/Product2/fields/NumeroDeSuites__c.field-meta.xml
<CustomField>
    <fullName>NumeroDeSuites__c</fullName>
    <label>Número de suítes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>