force-app/main/default/objects/Product2/fields/NumeroDeVagasIncorporadas__c.field-meta.xml
<CustomField>
    <fullName>NumeroDeVagasIncorporadas__c</fullName>
    <label>Número de vagas incorporadas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>