force-app/main/default/objects/Product2/fields/NumeroProcessoAlvara__c.field-meta.xml
<CustomField>
    <fullName>NumeroProcessoAlvara__c</fullName>
    <label>Número do Processo do Alvará</label>
    <length>200</length>
    <type>Text</type>
</CustomField>