force-app/main/default/objects/Product2/fields/OportunidadeUnidade__c.field-meta.xml
<CustomField>
    <fullName>OportunidadeUnidade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidade</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>ProductsOpportunity</relationshipName>
    <type>Lookup</type>
</CustomField>