force-app/main/default/objects/Product2/fields/Outras__c.field-meta.xml
<CustomField>
    <fullName>Outras__c</fullName>
    <label>Outras</label>
    <length>60</length>
    <type>Text</type>
</CustomField>