force-app/main/default/objects/Product2/fields/PrecoLista__c.field-meta.xml
<CustomField>
    <fullName>PrecoLista__c</fullName>
    <formula>ValorBase__c * Coeficiente__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preço de lista</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>