force-app/main/default/objects/Product2/fields/Quartos__c.field-meta.xml
<CustomField>
    <fullName>Quartos__c</fullName>
    <label>Quartos</label>
    <length>200</length>
    <type>Text</type>
</CustomField>