force-app/main/default/objects/Product2/fields/RegistroMatricula__c.field-meta.xml
<CustomField>
    <fullName>RegistroMatricula__c</fullName>
    <label>Registro da Matrícula</label>
    <length>200</length>
    <type>Text</type>
</CustomField>