force-app/main/default/objects/Product2/fields/StatusIntegracao__c.field-meta.xml
<CustomField>
    <fullName>StatusIntegracao__c</fullName>
    <description>Indica status da integração com ERP.</description>
    <inlineHelpText>Indica status da integração com ERP.</inlineHelpText>
    <label>Status da integração</label>
    <length>255</length>
    <type>Text</type>
</CustomField>