force-app/main/default/objects/Product2/fields/Terra_o__c.field-meta.xml
<CustomField>
    <fullName>Terra_o__c</fullName>
    <description>Terraço</description>
    <label>Terraço</label>
    <length>60</length>
    <type>Text</type>
</CustomField>