force-app/main/default/objects/Product2/fields/TipoDaUnidade__c.field-meta.xml
<CustomField>
    <fullName>TipoDaUnidade__c</fullName>
    <label>Tipo da Unidade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Padrão</fullName>
            </value>
            <value>
                <fullName>Térreo</fullName>
            </value>
            <value>
                <fullName>Cobertura</fullName>
            </value>
            <value>
                <fullName>PCD</fullName>
            </value>
            <value>
                <fullName>Vaga Coberta</fullName>
            </value>
            <value>
                <fullName>Vaga Descoberta</fullName>
            </value>
            <value>
                <fullName>Box</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>