force-app/main/default/objects/Product2/fields/Tipologia__c.field-meta.xml
<CustomField>
    <fullName>Tipologia__c</fullName>
    <label>Tipologia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TipologiaProduto</valueSetName>
    </valueSet>
</CustomField>