force-app/main/default/objects/Product2/fields/TipoVaga__c.field-meta.xml
<CustomField>
    <fullName>TipoVaga__c</fullName>
    <label>Tipo de Vaga</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Individual</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Dupla</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Tripla</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>