force-app/main/default/objects/Product2/fields/Torre__c.field-meta.xml
<CustomField>
    <fullName>Torre__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Torre</label>
    <referenceTo>Bloco__c</referenceTo>
    <relationshipLabel>Unidades</relationshipLabel>
    <relationshipName>Unidades_Torre</relationshipName>
    <type>Lookup</type>
</CustomField>