force-app/main/default/objects/Product2/fields/Unidade__c.field-meta.xml
<CustomField>
    <fullName>Unidade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unidade</label>
    <referenceTo>UnidadeTabelaVendas__c</referenceTo>
    <relationshipLabel>Produtos</relationshipLabel>
    <relationshipName>Unidades</relationshipName>
    <type>Lookup</type>
</CustomField>