force-app/main/default/objects/Product2/fields/VagasDisponiveis__c.field-meta.xml
<CustomField>
    <fullName>VagasDisponiveis__c</fullName>
    <formula>Empreendimento__r.VagasUnidade__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vagas Disponíveis</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>