force-app/main/default/objects/Product2/fields/VagasUnidade__c.field-meta.xml
<CustomField>
    <fullName>VagasUnidade__c</fullName>
    <label>Vagas por Unidade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>