force-app/main/default/objects/Product2/fields/ValorBase__c.field-meta.xml
<CustomField>
    <fullName>ValorBase__c</fullName>
    <formula>ValorM2__c *  MetragemTotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor base</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>