force-app/main/default/objects/Product2/fields/ValorDeAcrescimo__c.field-meta.xml
<CustomField>
    <fullName>ValorDeAcrescimo__c</fullName>
    <label>Valor de Acréscimo Vigente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>