force-app/main/default/objects/Product2/fields/ValorIPTU__c.field-meta.xml
<CustomField>
    <fullName>ValorIPTU__c</fullName>
    <label>Valor IPTU</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>