force-app/main/default/objects/Product2/fields/ValorM2__c.field-meta.xml
<CustomField>
    <fullName>ValorM2__c</fullName>
    <label>Valor (m²)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>