force-app/main/default/objects/Product2/fields/ValorVaga__c.field-meta.xml
<CustomField>
    <fullName>ValorVaga__c</fullName>
    <label>Valor Vaga</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>