force-app/main/default/objects/Product2/recordTypes/Garagem.recordType-meta.xml
<RecordType>
    <fullName>Garagem</fullName>
    <active>true</active>
    <label>Garagem</label>
</RecordType>