force-app/main/default/objects/Product2/recordTypes/Unidade.recordType-meta.xml
<RecordType>
    <fullName>Unidade</fullName>
    <active>true</active>
    <label>Unidade</label>
</RecordType>