force-app/main/default/objects/Product2/validationRules/ValidacaoCoeficiente.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidacaoCoeficiente</fullName>
    <active>false</active>
    <description>Validação do coeficiente, ele não pode ser nulo</description>
    <errorConditionFormula>ISBLANK(Coeficiente__c)</errorConditionFormula>
    <errorDisplayField>Coeficiente__c</errorDisplayField>
    <errorMessage>O coeficiente não pode ser nulo.</errorMessage>
</ValidationRule>