force-app/main/default/objects/Product2/listViews/Sala_Comercial.listView-meta.xml
<ListView>
    <fullName>Sala_Comercial</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.RECORD_TYPE</field>
        <operation>equals</operation>
        <value>Product2.SalaComercial</value>
    </filters>
    <label>Sala Comercial</label>
</ListView>