force-app/main/default/objects/Product2/listViews/Unidades.listView-meta.xml
<ListView>
    <fullName>Unidades</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.RECORD_TYPE</field>
        <operation>equals</operation>
        <value>Product2.Unidade</value>
    </filters>
    <label>Unidades</label>
</ListView>