force-app/main/default/objects/Product2/listViews/Vagas.listView-meta.xml
<ListView>
    <fullName>Vagas</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.RECORD_TYPE</field>
        <operation>equals</operation>
        <value>012be000000IIUn</value>
    </filters>
    <label>Vagas</label>
</ListView>