force-app/main/default/objects/Product2/listViews/Vagas_de_Garagem.listView-meta.xml
<ListView>
    <fullName>Vagas_de_Garagem</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.RECORD_TYPE</field>
        <operation>equals</operation>
        <value>Product2.Vaga</value>
    </filters>
    <label>Vagas de Garagem</label>
</ListView>